1.新增隐私协议同意界面

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -6,10 +6,16 @@
     <string name="app_create_folder">新建文件夹</string>
     <string name="app_cancel">取消</string>
     <string name="app_confirm">确定</string>
+    <string name="app_agree">同意</string>
+    <string name="app_disagree">不同意</string>
+
     <string name="app_folder_name">文件夹名称</string>
     <string name="app_note_content_text">笔记内容</string>
     <string name="app_search">搜索</string>
     <string name="app_set">设置</string>
+
+    <string name="app_privacy_protection">隐私政策</string>
+
 
 
 </resources>
