--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,15 @@
     <string name="app_create_folder">Create Folder</string>
     <string name="app_cancel">Cancel</string>
     <string name="app_confirm">Confirm</string>
+
+    <string name="app_agree">Agree</string>
+    <string name="app_disagree">Disagree</string>
+
     <string name="app_folder_name">Folder Name</string>
     <string name="app_note_content_text">NoteContentText</string>
     <string name="app_search">Search</string>
     <string name="app_set">Set</string>
+    <string name="app_privacy_protection">privacy Protection</string>
 
 
 </resources>
