--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">WordsFairy Note</string>
 
     <string name="app_create_folder">Create Folder</string>
+    <string name="app_rename_folder">Rename Folder</string>
     <string name="app_cancel">Cancel</string>
     <string name="app_confirm">Confirm</string>
 
@@ -12,6 +13,7 @@
     <string name="app_note_content_text">NoteContentText</string>
     <string name="app_search">Search</string>
     <string name="app_set">Set</string>
+    <string name="app_folder_manage">FolderManage</string>
     <string name="app_data_recovery_backup">NoteData Recovery/Backup</string>
     <string name="app_privacy_protection">privacy Protection</string>
 
